# rise-scheduling

./: .gitignore  CLAUDE.md  README.md  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  render.yaml
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  authz.py  deps.py  main.py
backend/app/auth/: __init__.py  base.py  jwt_backend.py
backend/app/db/: __init__.py  base.py  engine.py  session.py
backend/app/engine/: __init__.py  calendar.py  cpm.py  errors.py  graph.py  rollup.py  types.py
backend/app/mcp/: __init__.py  auth.py  oauth.py  oauth_login.py  server.py  tools.py
backend/app/models/: __init__.py  audit_log.py  dependency.py  enums.py  milestone.py  oauth.py  project.py  resource.py  task.py  user.py  user_project.py
backend/app/repositories/: __init__.py  audit_repo.py  dependency_repo.py  oauth_repo.py  project_repo.py  task_repo.py  user_repo.py
backend/app/schemas/: __init__.py  audit.py  auth.py  dependency.py  project.py  task.py  user.py
backend/app/seed/: __init__.py  admin_user.py  lake_jackson.py  run_seed.py  seed_data.py
backend/app/services/: __init__.py  audit_view.py  auth_service.py  errors.py  project_service.py  proposal_service.py  report_service.py  scheduling_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 1cf780a74a82_initial_schema.py  3a7e1b9c2d04_add_task_trade.py  a1b2c3d4e5f6_add_user_projects.py  b2c3d4e5f6a7_add_task_version_updated.py  b6c7d8e9f0a1_add_user_must_change_password.py  (+6 more)
backend/tests/: conftest.py
docs/: DEPLOY.md  (+2 more)
(+62 files in other folders)
