[project]
name = "rise-schedule-hub"
version = "0.1.0"
description = "RISE Schedule Hub — standalone LIHTC development scheduling system (pilot)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",  # passlib 1.7.x is incompatible with bcrypt>=4.1
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Keep `str, Enum` mixins for stable JSON/DB serialisation across Python versions.
ignore = ["UP042"]
